# python-web_hw_02

./: .gitignore  Dockerfile  README.md  n_book.json  pyproject.toml
recordbook/: cl_interface.py  decorator.py  main.py  n_book.json  note_book.py  record_book.py  record_classes.py
